Añadir mi sqlite.jar

--- a/ProjectCars/.classpath
+++ b/ProjectCars/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/Jone/Downloads/sqlite-jdbc-3.20.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Unai Jauregibeitia/A_Uni/Prog III/BD/sqlite-jdbc-3.20.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
